--- a/package.json
+++ b/package.json
@@ -9,12 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.2.0",
+    "@apollo/client": "^3.6.9",
+    "@stripe/react-stripe-js": "^1.9.0",
+    "@stripe/stripe-js": "^1.32.0",
+    "formik": "^2.2.9",
+    "framer-motion": "^6.3.11",
+    "graphql": "^16.5.0",
+    "lodash": "^4.17.21",
+    "next": "12.1.6",
+    "next-transpile-modules": "^9.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-cookie-consent": "^7.4.1",
+    "react-device-detect": "^2.2.2",
+    "react-dom": "18.2.0",
+    "react-haiku": "^2.0.1",
+    "react-scroll": "^1.8.7",
+    "stripe": "^9.10.0"
   },
   "devDependencies": {
-    "eslint": "8.19.0",
-    "eslint-config-next": "12.2.0"
+    "autoprefixer": "^10.4.7",
+    "eslint": "8.17.0",
+    "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.3"
   }
 }
